Fixed spacing issues on post.scss

--- a/resources/sass/category.scss
+++ b/resources/sass/category.scss
@@ -46,6 +46,10 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
 #wrapper {
     text-align: center;
     display: flex;
